Converting FavouriteNumbers to Kotlin